# HTTPServer

./: CMakeLists.txt  README.md
HttpServer/examples/: test_client.cc
HttpServer/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/middleware/: Middleware.h  MiddlewareChain.h
HttpServer/include/middleware/cors/: CorsConfig.h  CorsMiddleware.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h
HttpServer/include/ssl/: SslConfig.h  SslConnection.h  SslContext.h  SslTypes.h
HttpServer/include/utils/: FileUtil.h  MysqlUtil.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h  DbException.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/: MiddlewareChain.cpp
HttpServer/src/middleware/cors/: CorsMiddleware.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/ssl/: SslConfig.cpp  SslConnection.cpp  SslContext.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
WebApps/GomokuServer/include/: AiGame.h  GomokuServer.h
WebApps/GomokuServer/include/handlers/: AiGameMoveHandler.h  AiGameStartHandler.h  EntryHandler.h  GameBackendHandler.h  LoginHandler.h  LogoutHandler.h  MenuHandler.h  RegisterHandler.h
WebApps/GomokuServer/resource/: Backend.html  ChessGameVsAi.html  NotFound.html  entry.html  menu.html
WebApps/GomokuServer/src/: AiGame.cpp  GomokuServer.cpp  main.cpp
WebApps/GomokuServer/src/handlers/: AiGameMoveHandler.cpp  AiGameStartHandler.cpp  EntryHandler.cpp  GameBackendHandler.cpp  LoginHandler.cpp  Loginout.cpp  MenuHandler.cpp  RegisterHandler.cpp
